[gd_scene load_steps=23 format=2]

[ext_resource path="res://Menus/MainMenu/Join_menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg/bg3.jpg" type="Texture" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/resources/light_b.png" type="Texture" id=4]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=5]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://calibrib.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Menus/resources/dark_w.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.686275 )
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.94902, 0.956863, 0.0470588, 1 )
shadow_size = 6

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.196078, 0.176471, 0.517647, 1 )
shadow_size = 6

[sub_resource type="DynamicFont" id=7]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 64
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
shadow_size = 6

[sub_resource type="DynamicFont" id=10]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
shadow_size = 6

[sub_resource type="DynamicFont" id=13]
size = 34
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 34
use_filter = true
font_data = ExtResource( 3 )

[node name="Join_menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverInfo" type="Panel" parent="."]
anchor_left = 0.775
anchor_top = 0.471
anchor_right = 0.775
anchor_bottom = 0.471
margin_left = -231.0
margin_top = -160.858
margin_right = 232.0
margin_bottom = 160.142
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="serverInfo"]
margin_right = 463.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="serverInfo/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -18.5
margin_right = 82.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 2 )
text = "Server Info"

[node name="Label" type="Label" parent="serverInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.728
margin_top = -114.793
margin_right = 220.272
margin_bottom = 138.207
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manualIp_btn" type="Button" parent="serverInfo"]
margin_left = 160.0
margin_top = 351.738
margin_right = 342.0
margin_bottom = 392.738
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Try Manual IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pop" type="AcceptDialog" parent="."]
margin_left = 471.941
margin_top = 35.099
margin_right = 1047.94
margin_bottom = 210.099
window_title = "Error"
dialog_text = "

Unable to join server."

[node name="join_button" type="Button" parent="."]
anchor_left = 0.855
anchor_top = 0.913
anchor_right = 0.855
anchor_bottom = 0.913
margin_left = -94.45
margin_top = -41.8151
margin_right = 93.5499
margin_bottom = 42.1849
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
anchor_left = 0.105
anchor_top = 0.93
anchor_right = 0.105
anchor_bottom = 0.93
margin_left = -76.4
margin_top = -27.6
margin_right = 76.6
margin_bottom = 27.4
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 7 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="con" type="Label" parent="."]
visible = false
margin_left = 466.054
margin_top = 624.071
margin_right = 828.054
margin_bottom = 688.071
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.0392157, 0.0823529, 0.027451, 1 )
custom_colors/font_color_shadow = Color( 0.807843, 0.52549, 0.52549, 1 )
text = "Connecting ..."

[node name="serverList" type="Panel" parent="."]
anchor_left = 0.26
anchor_top = 0.524
anchor_right = 0.26
anchor_bottom = 0.524
margin_left = -232.8
margin_top = -197.28
margin_right = 233.2
margin_bottom = 197.72
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Header" type="Panel" parent="serverList"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -233.0
margin_right = 233.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="serverList/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -18.5
margin_right = 82.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 10 )
text = "Server List"

[node name="serverList" type="VBoxContainer" parent="serverList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.706
margin_top = -144.241
margin_right = 219.294
margin_bottom = 158.759
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b1" type="TextureButton" parent="serverList/serverList"]
visible = false
margin_right = 439.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
texture_normal = ExtResource( 9 )
expand = true

[node name="label" type="Label" parent="serverList/serverList/b1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -16.0
margin_right = 221.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "best server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b2" type="TextureButton" parent="serverList/serverList"]
visible = false
margin_right = 439.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
texture_normal = ExtResource( 4 )
expand = true

[node name="label" type="Label" parent="serverList/serverList/b2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -21.0
margin_right = 220.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 11 )
text = "my server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b3" type="TextureButton" parent="serverList/serverList"]
visible = false
margin_right = 439.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="serverList/serverList/b3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -16.0
margin_right = 221.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "best server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b4" type="TextureButton" parent="serverList/serverList"]
visible = false
margin_right = 439.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
texture_normal = ExtResource( 4 )
expand = true

[node name="label" type="Label" parent="serverList/serverList/b4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.5
margin_top = -21.0
margin_right = 220.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 11 )
text = "my server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b5" type="TextureButton" parent="serverList/serverList"]
visible = false
margin_right = 439.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="serverList/serverList/b5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -16.0
margin_right = 221.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "best server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="manual_ip" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.0
margin_top = -184.0
margin_right = 449.0
margin_bottom = 184.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="manual_ip"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.934
margin_top = -130.462
margin_right = 358.066
margin_bottom = 117.538
custom_constants/separation = 60
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ip" type="LineEdit" parent="manual_ip/container"]
margin_right = 468.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 6 )
text = "127.0.0.1"
max_length = 64

[node name="Label" type="Label" parent="manual_ip/container/ip"]
margin_left = -257.0
margin_top = 23.6312
margin_right = -60.7675
margin_bottom = 75.6312
custom_fonts/font = SubResource( 13 )
text = "Server IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="port" type="LineEdit" parent="manual_ip/container"]
margin_top = 154.0
margin_right = 468.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 6 )
text = "6969"
max_length = 64

[node name="Label" type="Label" parent="manual_ip/container/port"]
margin_left = -257.937
margin_top = 23.4618
margin_right = -16.937
margin_bottom = 74.4618
custom_fonts/font = SubResource( 14 )
text = "Server Port"

[node name="auto" type="Button" parent="manual_ip"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = 216.0
margin_right = 95.5
margin_bottom = 267.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Try Auto Search"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="serverInfo/manualIp_btn" to="." method="_on_manualIp_btn_pressed"]
[connection signal="pressed" from="join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="serverList/serverList/b1" to="." method="_on_b1_pressed"]
[connection signal="pressed" from="serverList/serverList/b2" to="." method="_on_b2_pressed"]
[connection signal="pressed" from="serverList/serverList/b3" to="." method="_on_b3_pressed"]
[connection signal="pressed" from="serverList/serverList/b4" to="." method="_on_b4_pressed"]
[connection signal="pressed" from="serverList/serverList/b5" to="." method="_on_b5_pressed"]
[connection signal="pressed" from="manual_ip/auto" to="." method="_on_auto_pressed"]
